# rust-cudnn

./: README.md
cudnn/: Cargo.toml
cudnn-sys/: Cargo.toml  build.rs
cudnn-sys/src/: lib.rs
cudnn/src/: cudnn.rs  filter_descriptor.rs  pooling_descriptor.rs  utils.rs
cudnn/src/api/: activation.rs  convolution.rs  normalization.rs  pooling.rs
cudnn/tests/: cudnn_specs.rs
