[package]
name            = "cudnn-sys"
description     = "FFI bindings to cuDNN"
version         = "0.1.0"
authors         = ["Maximilian Goisser <max@autumnai.com>",
                   "ICHIKAWA, Yuji <ichikawa.yuji@gmail.com>"]

repository      = "https://github.com/y-ich/rust-cudnn/tree/bindgen"
homepage        = "https://github.com/y-ich/rust-cudnn/tree/bindgen"
documentation   = "https://autumnai.github.io/rust-cudnn"

keywords        = ["cudnn", "cuda", "nvidia", "sys"]
license         = "MIT OR Apache-2.0"

links = "cudnn"
build = "build.rs"

[dependencies]
libc = "^0.2"

[build-dependencies]
pkg-config = "^0.3"
bindgen = "^0.26.3"
