[package]
name            = "cudnn"
description     = "safe Rust wrapper for CUDA's cuDNN"
version         = "1.4.0"
authors         = ["MichaelHirn <mj@autumnai.com>",
                   "Maximilian Goisser <max@autumnai.com>",
                   "ICHIKAWA Yuji <ichikawa.yuji@gmail.com>"]

repository      = "https://github.com/y-ich/rust-cudnn/tree/bindgen"
homepage        = "https://github.com/y-ich/rust-cudnn/tree/bindgen"
documentation   = "https://autumnai.github.io/rust-cudnn"
readme          = "../README.md"

keywords        = ["cudnn", "cuda", "nvidia", "neural-network"]
license         = "MIT OR Apache-2.0"

[dependencies]
libc = "^0.2"
# cudnn-sys = { path = "../cudnn-sys" }
cudnn-sys = { git = "https://github.com/y-ich/rust-cudnn", branch = "bindgen" }

clippy = { version = "^0.0.27", optional = true }

[dev-dependencies]
#collenchyma = "0.0.8"
collenchyma = { path = "/Users/yuji/OpenSources/collenchyma" }

[features]
dev = []
travis = []
lint = ["clippy"]
